@@ -256,6 +256,8 @@ Upgrading
 From 0.9.0
 **********
 
+- Login and signup views have been turned into class-based views.
+
 - The template variable `facebook_perms` is no longer passed to the
   "facebook/fbconnect.html" template. Instead, `fb_login_options`
   containing all options is passed.
@@ -419,7 +421,7 @@ The following Facebook settings are available::
     SOCIALACCOUNT_PROVIDERS = \
         { 'facebook': 
             { 'SCOPE': ['email', 'publish_stream'],
-	      'FB_LOGIN': { 'auth_type': 'reauthenticate' },
+	      'AUTH_PARAMS': { 'auth_type': 'reauthenticate' },
               'METHOD': 'oauth2' ,
               'LOCALE_FUNC': 'path.to.callable'} }
 
@@ -437,7 +439,7 @@ internationalization/>`_ as a string::
         { 'facebook':
             { 'LOCALE_FUNC': lambda request: 'zh_CN'} }
 
-Use `FB_LOGIN` to pass along other parameters to the `FB.login` JS SDK
+Use `AUTH_PARAMS` to pass along other parameters to the `FB.login` JS SDK
 call.
 
 Google
@@ -452,7 +454,8 @@ You can specify the scope to use as follows::
 
     SOCIALACCOUNT_PROVIDERS = \
         { 'google': 
-            { 'SCOPE': ['https://www.googleapis.com/auth/userinfo.profile'] } }
+            { 'SCOPE': ['https://www.googleapis.com/auth/userinfo.profile'],
+              'AUTH_PARAMS': { 'access_type': 'online' } }}
 
 By default, `profile` scope is required, and optionally `email` scope
 depending on whether or not `SOCIALACCOUNT_QUERY_EMAIL` is enabled.
