@@ -10,6 +10,10 @@ class OAuth2Provider(Provider):
             url = url + '?' + urlencode(kwargs)
         return url
 
+    def get_auth_params(self):
+        settings = self.get_settings()
+        return settings.get('AUTH_PARAMS', {})
+        
     def get_scope(self):
         settings = self.get_settings()
         scope = settings.get('SCOPE')
